<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LookAtMe"
    tools:context="hooligan.QRScanner.QRActivity">
    <!--tools:context="hooligan.travelbuddy.hooligan.ui.camera.QRScanner.QRActivity">-->


    <TextView
        android:id="@+id/status_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:background="@color/FightME"
        android:text="@string/barcode_header"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/barcode_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/status_message"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/status_message"
        android:layout_below="@+id/status_message"
        android:layout_marginTop="110dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/read_barcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/FightME"
        android:onClick="onClick"
        android:text="@string/read_barcode" />

    <CheckBox
        android:id="@+id/auto_focus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/barcode_value"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:background="@color/FightME"
        android:checked="false"
        android:text="@string/auto_focus" />

    <CheckBox
        android:id="@+id/use_flash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/auto_focus"
        android:layout_alignStart="@+id/auto_focus"
        android:layout_below="@+id/status_message"
        android:layout_marginTop="19dp"
        android:background="@color/FightME"
        android:checked="false"
        android:text="@string/use_flash" />

</RelativeLayout>
<!--</android.support.constraint.ConstraintLayout>-->


