<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LookAtMe"
    tools:context="hooligan.travelbuddy.Character$PlaceholderFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="406dp"
        android:layout_height="315dp"
        android:layout_marginTop="24dp"
        android:contentDescription="ME"
        android:src="@mipmap/avatar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:gravity="bottom|center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="337dp"
                android:layout_height="match_parent"
                android:text="@string/health"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="369dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/hunger"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="330dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:text="100"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/strength"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="408dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="100"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/stamina"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="447dp" />

        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>