<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LookAtMe"
    android:fitsSystemWindows="true"
    tools:context="hooligan.travelbuddy.Character">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/LookAtMe"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <TextView
            android:id="@+id/CharName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/travelbuddy"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textColorLink="@android:color/background_light"
            android:textSize="36sp"
            android:textStyle="normal"
            app:layout_anchor="@+id/container"
            app:layout_anchorGravity="top|center"
            tools:layout_editor_absoluteY="3dp" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="509dp"
        android:layout_gravity="bottom|center"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="58dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="218dp">

            <android.support.v4.view.ViewPager
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/FightME"
                android:padding="5dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="54dp">

            </android.support.v4.view.ViewPager>
        </FrameLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="72dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/levelLabel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Level"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="447dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/health"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/healthLabel"
                    android:layout_width="337dp"
                    android:layout_height="match_parent"
                    android:text="@string/health"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="369dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/hunger"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/hungerLabel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/hunger"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="330dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/strength"
                    android:layout_width="129dp"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/strengthLabel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/strength"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="408dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/stamina"
                    android:layout_width="128dp"
                    android:layout_height="wrap_content"
                    android:text="100"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/staminaLabel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/stamina"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="447dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/stepCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0/100"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/stepCountLabel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Steps"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="447dp" />

            </TableRow>

        </TableLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/FightME"
        app:srcCompat="@android:drawable/ic_menu_view" />

</android.support.design.widget.CoordinatorLayout>
